<resources>
    <string name="app_name">specialMPS</string>
    <string name="surprise">0.04</string>
    <string name="fear">0.09</string>
    <string name="distressed">0.13</string>
    <string name="angry">0.11</string>
    <string name="miserable">0.16</string>
    <string name="gloomy">0.2</string>
    <string name="bored">0.18</string>
    <string name="tired">0.07</string>
    <string name="neutral">0.2</string>




    <string name="signup_info_request">모든 정보를 입력해주세요!</string>
    <string name="signup_birth_request">태어난 연도를 다시 입력해주세요!</string>
    <string name="signup_id_exist">이미 존재하는 아이디입니다.</string>

    <string name="signup">회원가입</string>
    <string name="input_name">이름을 입력하세요</string>
    <string name="input_id">아이디를 입력하세요</string>
    <string name="input_pw">비밀번호를 입력하세요</string>
    <string name="input_birth">태어난 연도를 입력하세요</string>
    <string name="woman">여성</string>
    <string name="man">남성</string>
    <string name="register">등록</string>
    <string name="cancel">취소</string>
    <string name="title_activity_sliding_root_nav">sliding_root_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <array name="menuOptions">
        <item>상담</item>
        <item>이전 상담 조회</item>
        <item>상담 기관 조회</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
